--- a/Projeto-integrador/.env
+++ b/Projeto-integrador/.env
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=base64:tYt1+av5jqM+KF9mLDtomFHRiV3NN+zYi1B7MdybkEs=
 APP_DEBUG=true
 APP_URL=http://localhost
+#APP_URL=https://194a-177-223-89-71.ngrok-free.app
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
