--- a/Projeto-integrador/.env
+++ b/Projeto-integrador/.env
@@ -20,7 +20,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -31,13 +31,16 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+#MAIL_HOST=mailpit
+MAIL_HOST=smtp.gmail.com
+#MAIL_PORT=1025
+MAIL_PORT=587
+MAIL_USERNAME=rhfacilitaofc@gmail.com
+MAIL_PASSWORD=rhfacilita2025$
+MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="rhfacilitaofc@gmail.com"
+MAIL_FROM_NAME="RH FACILITA"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
